# nixon

./: .gitignore  .hlint.yaml  .mailmap  .nixon.md  CHANGELOG.md  LICENSE  README.md  default.nix  derivation.nix  envix.cabal  flake.nix  hie.yaml  nixon.cabal  nixon.md  nixpkgs.nix  package.yaml  shell.nix  todos.org
.github/workflows/: build.yml  haskell.yml
app/: Main.hs
extra/: config.md  nixon-widget.bash  nixon-widget.zsh
src/: Envix.hs  Main.hs  Nixon.hs  Rofi.hs
src/Envix/: Commands.hs  Config.hs  Direnv.hs  Fzf.hs  Nix.hs  Options.hs  Process.hs  Projects.hs  Rofi.hs  Select.hs
src/Envix/Config/: JSON.hs  Options.hs
src/Envix/Projects/: Commands.hs  Defaults.hs  Types.hs
src/Nixon/: Backend.hs  Command.hs  Config.hs  Direnv.hs  Evaluator.hs  Format.hs  Fzf.hs  Language.hs  Logging.hs  Nix.hs  Prelude.hs  Process.hs  Project.hs  Projects.hs  Rofi.hs  Select.hs  Types.hs  Utils.hs
src/Nixon/Backend/: Fzf.hs  Rofi.hs
src/Nixon/Command/: Defaults.hs  Find.hs  Placeholder.hs  Run.hs
src/Nixon/Config/: JSON.hs  Markdown.hs  Options.hs  Types.hs
src/Nixon/Project/: Defaults.hs  Types.hs
src/Nixon/Projects/: Defaults.hs  Types.hs
src/Nixon/Wrappers/: Direnv.hs  Nix.hs
test/: Main.hs  Spec.hs
test/Test/Nixon/: Command.hs  Logging.hs  Process.hs  TestLib.hs
test/Test/Nixon/Backend/: Fzf.hs
test/Test/Nixon/Command/: Find.hs
test/Test/Nixon/Config/: Markdown.hs
test/Test/Nixon/Format/: Columns.hs
test/Text/Nixon/: Logging.hs
