cabal-version:       >=1.10

name:                envix
-- https://pvp.haskell.org
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:             MIT
license-file:        LICENSE
author:              Martin Øinæs Myrseth
maintainer:          myrseth@gmail.com

-- A copyright notice.
-- copyright:

category:            Development

build-type:          Simple

extra-source-files:  CHANGELOG.md

executable envix
  main-is:             Main.hs
  other-modules:       Envix.Fzf
                     , Envix.Nix
                     , Envix.Process
                     , Envix.Projects
                     , Envix.Rofi
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
                     , containers
                     , directory
                     , foldl
                     , process
                     , text
                     , turtle
                     , unix
                     , wordexp
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , NamedFieldPuns
                     , TupleSections
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
