cabal-version:       >=1.10

name:                nixon
-- https://pvp.haskell.org
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:             MIT
license-file:        LICENSE
author:              Martin Øinæs Myrseth
maintainer:          myrseth@gmail.com

-- A copyright notice.
-- copyright:

category:            Development

build-type:          Simple

extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Nixon
                     , Nixon.Config
                     , Nixon.Config.JSON
                     , Nixon.Config.Options
                     , Nixon.Direnv
                     , Nixon.Fzf
                     , Nixon.Nix
                     , Nixon.Process
                     , Nixon.Projects
                     , Nixon.Projects.Defaults
                     , Nixon.Projects.Types
                     , Nixon.Rofi
                     , Nixon.Select
  build-depends:       base >=4.12 && <4.13
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , foldl
                     , haskeline
                     , process
                     , text
                     , transformers
                     , turtle
                     , unix
                     , unordered-containers
                     , wordexp
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , NamedFieldPuns
                     , TupleSections
  ghc-options:         -Wall

executable nixon
  main-is:             Main.hs
  other-modules:       Nixon
                     , Nixon.Config
                     , Nixon.Config.JSON
                     , Nixon.Config.Options
                     , Nixon.Direnv
                     , Nixon.Fzf
                     , Nixon.Nix
                     , Nixon.Process
                     , Nixon.Projects
                     , Nixon.Projects.Defaults
                     , Nixon.Projects.Types
                     , Nixon.Rofi
                     , Nixon.Select
  hs-source-dirs:      src
  build-depends:       base >=4.12 && <4.13
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , foldl
                     , haskeline
                     , process
                     , text
                     , transformers
                     , turtle
                     , unix
                     , unordered-containers
                     , wordexp
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , NamedFieldPuns
                     , TupleSections
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N


test-suite nixon-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hspec
    , nixon
    , text
  default-language: Haskell2010
  default-extensions:  OverloadedStrings
