cabal-version:       >=1.10

name:                nixon
-- https://pvp.haskell.org
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:             MIT
license-file:        LICENSE
author:              Martin Øinæs Myrseth
maintainer:          myrseth@gmail.com

-- A copyright notice.
-- copyright:

category:            Development

build-type:          Simple

extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Nixon
                     , Nixon.Command
                     , Nixon.Config
                     , Nixon.Config.JSON
                     , Nixon.Config.Markdown
                     , Nixon.Config.Options
                     , Nixon.Config.Types
                     , Nixon.Direnv
                     , Nixon.Evaluator
                     , Nixon.Fzf
                     , Nixon.Language
                     , Nixon.Logging
                     , Nixon.Nix
                     , Nixon.Process
                     , Nixon.Project
                     , Nixon.Rofi
                     , Nixon.Select
                     , Nixon.Types
                     , Nixon.Utils
  build-depends:       base >=4.12
                     , aeson
                     , bytestring
                     , cmark
                     , containers
                     , cryptohash
                     , directory
                     , exceptions
                     , foldl
                     , haskeline
                     , optparse-applicative
                     , parsec
                     , process
                     , strip-ansi-escape
                     , text
                     , transformers
                     , turtle
                     , unix
                     , unordered-containers
                     , wordexp
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , NamedFieldPuns
                     , TupleSections
  ghc-options:         -Wall -Wextra


executable nixon
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >=4.12
                     , nixon
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , NamedFieldPuns
                     , TupleSections
  ghc-options:         -Wall -Wextra -threaded -rtsopts -with-rtsopts=-N


test-suite nixon-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules: Test.Nixon.Command
               , Test.Nixon.Config.Markdown
               , Test.Nixon.Logging
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7
    , hspec
    , nixon
    , QuickCheck
    , quickcheck-instances
    , text
    , transformers
  default-language: Haskell2010
  default-extensions:  OverloadedStrings
                     , GeneralizedNewtypeDeriving
